--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,14 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/style/bootstrap.css",
+              "src/assets/style/font-awesome.min.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/assets/js/jquery-1.10.2.js",
+              "src/assets/js/bootstrap.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
